@@ -1,5 +1,6 @@
 Tk::TreeGraph is a Canvas specialized to draw trees on a Canvas using
-arrows and nodes. A node is simply some text imbedded in a rectangular shape.
+arrows and nodes. A node is simply some text imbedded in a rectangular
+shape.
 
 TreeGraph is able to draw the following items:
 
@@ -9,8 +10,16 @@ TreeGraph is able to draw the following items:
 - shortcuts arrow: an arrow to represent a shortcut between 2 nodes from
   different branches.
 
-Starting from version 1.007, all coordinates are handled by the object.
-Hence drawing the tree is much simpler.
+Starting from version 1.007, all coordinates are handled by the
+object.  Hence drawing the tree is much simpler.
+
+Starting from version 1.008, you don't need to draw the direct and
+slanted arrows yourself, the object will do it for you when you add a
+node.
+
+Hence drawing the tree is even more simple.
+
+
 
 Suggested DSLI line in the Ptk module list:
 
